infra/k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: noirfatale/ugorala-admin
---
apiVersion: v1
kind: Service
metadata:
  name: admin-srv
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - name: admin
      protocol: TCP
      port: 4000  # this is the port exposed by the service (admin-srv:4000)
      targetPort: 3000 # this is the port app is running on in the container
