infra/k8s/strapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: noirfatale/ugorala-strapi
---

apiVersion: v1
kind: Service
metadata:
  name: strapi-srv
spec:
  type: ClusterIP # it is defalut value for services, no need to specify it
  selector:
    app: strapi
  ports:
    - name: strapi
      protocol: TCP
      port: 1337
      targetPort: 1337

---

apiVersion: v1
kind: Service
metadata:
  name: strapi-nodeport-srv
spec:
  type: NodePort
  selector:
    app: strapi
  ports:
    - name: strapi
      protocol: TCP
      port: 1337
      targetPort: 1337
